2011-10-15  Robert Millan  <rmh@gnu.org>

	Fix build problem on FreeBSD and GNU/kFreeBSD.

	* util/getroot.c [__FreeBSD_kernel__]: Include `<sys/mount.h>'.

2011-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix overflow with >2GiB file on HFS+. >4GiB wasn't tested.

	* grub-core/fs/hfsplus.c (grub_hfsplus_btree): Use more appropriate
	types.
	(grub_hfsplus_btree_recoffset): Likewise.
	(grub_hfsplus_btree_recptr): Likewise.
	(grub_hfsplus_find_block): Likewise.
	(grub_hfsplus_btree_search): Likewise.
	(grub_hfsplus_read_block): Likewise.
	(grub_hfsplus_read_file): Likewise.
	(grub_hfsplus_mount): Likewise.
	(grub_hfsplus_btree_iterate_node): Likewise.
	(grub_hfsplus_btree_search): Likewise.
	(grub_hfsplus_iterate_dir): Likewise.
	(grub_hfsplus_read): A small code simplification.

2011-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c
	(convert_system_partition_to_system_disk): Don't assume that children
	of mapper nodes are mapper nodes.

2011-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/ctype.h (isxdigit): Use grub_isxdigit.
	* include/grub/misc.h (grub_isxdigit): New function.
	* grub-core/video/colors.c (my_isxdigit): Removed. All users
	switched to grub_isxdigit.
	* grub-core/term/serial.c (grub_serial_find): Fix in case of port
	number starting with a letter.

2011-10-09  Robert Millan  <rmh@gnu.org>

	LVM support for FreeBSD and GNU/kFreeBSD.

	* util/lvm.c (grub_util_lvm_isvolume): Enable on FreeBSD and
	GNU/kFreeBSD.
	(LVM_DEV_MAPPER_STRING): Move from here ...
	* include/grub/util/lvm.h (LVM_DEV_MAPPER_STRING): ... to here.
	* util/getroot.c: Include `<grub/util/lvm.h>'.
	(grub_util_get_dev_abstraction): Enable
	grub_util_biosdisk_is_present() on FreeBSD and GNU/kFreeBSD.
	Check for LVM abstraction on FreeBSD and GNU/kFreeBSD.
	(grub_util_get_grub_dev): Replace "/dev/mapper/" with
	`LVM_DEV_MAPPER_STRING'.  Enable LVM and mdRAID only on platforms that
	support it.